--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,7 +9,6 @@ html {
   height: 100% !important;
 }
 
-
 h2,
 h3,
 h4 {
@@ -615,4 +614,8 @@ label {
   #about img {
     margin: 50px 0;
   }
+
+  #menu img {
+    width: 18em;
+}
 }
