--- a/public/css/style.css
+++ b/public/css/style.css
@@ -339,7 +339,7 @@ header .intro-text {
 }
 
 .service-desc a{
-  color: #444;
+  color: #cc0033;
 }
 
 .service-desc a:hover{
@@ -348,7 +348,7 @@ header .intro-text {
 }
 
 #services h2 {
-  color: #fff;
+  color: #333;
 }
 #services .section-title h2::after {
   position: absolute;
@@ -365,9 +365,9 @@ header .intro-text {
   width: 120px;
   height: 120px;
   padding: 40px 0;
-  background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%);
+  background: linear-gradient(to right, #FF8C00 0%, #faca45 100%);
   border-radius: 50%;
-  color: #fff;
+  color: #333;
   box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.05);
 }
 
@@ -377,7 +377,7 @@ header .intro-text {
   color: #fff;
 }
 #services p {
-  color: rgba(255, 255, 255, 0.75);
+  color: #333;
 }
 
 #services .service-desc {
