--- a/public/css/style.css
+++ b/public/css/style.css
@@ -48,7 +48,7 @@ p.intro {
   line-height: 24px;
 }
 a {
-  color: #608dfd;
+  color: #cc0033;
   font-weight: 400;
 }
 a:hover,
@@ -267,12 +267,12 @@ header .intro-text {
   font-size: 38px;
   margin-bottom: 20px;
   transition: all 0.5s;
-  color: #fff;
+  color: #333;
   width: 100px;
   height: 100px;
   padding: 30px 0;
   border-radius: 50%;
-  background: linear-gradient(to right, #9396aa 0%, #5ca9fb 100%);
+  background: linear-gradient(to right, #FF8C00 0%, #faca45 100%);
   box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.05);
 }
 /* About Section */
