--- a/public/css/style.css
+++ b/public/css/style.css
@@ -99,7 +99,7 @@ hr {
 #menu.navbar-default .navbar-nav > li > a {
   font-family: "Lato", sans-serif;
   text-transform: capitalize;
-  color: #555;
+  color: #333;
   font-size: 17px;
   font-weight: 700;
   padding: 8px 2px;
@@ -113,7 +113,7 @@ hr {
   bottom: -1px;
   width: 0;
   height: 2px;
-  background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%);
+  background: linear-gradient(to right, #FF8C00 0%, #faca45 100%);
   content: "";
   transition: width 0.2s;
 }
@@ -134,7 +134,7 @@ hr {
   bottom: -1px !important;
   width: 100% !important;
   height: 2px !important;
-  background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%) !important;
+  background: linear-gradient(to right, #cc0033 0%, #ff89a7 100%) !important;
   content: "" !important;
   transition: width 0.2s !important;
 }
@@ -241,9 +241,9 @@ a:focus,
   color: #5ca9fb;
 }
 .intro p {
-  color: #fff;
+  color: #ff8b00;
   font-size: 22px;
-  font-weight: 300;
+  font-weight: 400;
   line-height: 30px;
   margin: 0 auto;
   margin-bottom: 60px;
@@ -332,7 +332,7 @@ header .intro-text {
 #services {
   padding: 100px 0;
   background: linear-gradient(to right, #b3d7f7 0%, #5ca9fb 50%, #6372ff 100%);
-  color: #fff;
+  color: #444;
 }
 #services .service-desc {
   margin: 10px 10px 20px;
@@ -554,9 +554,10 @@ header .intro-text {
 }
 #contact .section-title p {
   font-size: 16px;
+  color: #444;
 }
 #contact h2 {
-  color: #fff;
+  color: #444;
   margin-top: 10px;
   margin-bottom: 15px;
   padding-bottom: 15px;
@@ -571,7 +572,7 @@ header .intro-text {
   left: 30px;
 }
 #contact h3 {
-  color: #fff;
+  color: #444;
   margin-top: 80px;
   margin-bottom: 25px;
   padding-bottom: 20px;
@@ -666,7 +667,7 @@ label {
   transition: all 0.3s;
 }
 #contact .social i.fa:hover {
-  color: #fff;
+  color: #444;
   background: #ff8b00;
 }
 /* Footer Section*/
